# umbrella-reg-comm-mon

./: .dockerignore  .gitignore  CLAUDE.md  ELASTICSEARCH_QUICKSTART.md  PLAN.md  README.md  convert_pdf.py  elasticsearch_setup.md  input.md  kafka_setup.md  postgres_design_plan.md
agents/: Dockerfile  pyproject.toml
agents/tests/: test_executor.py  test_run_registry.py  test_streaming.py  test_tool_call_parser.py  test_tools.py  test_translate.py
agents/umbrella_agents/: __main__.py  app.py  config.py  executor.py  model_router.py  run_registry.py  tool_call_parser.py
agents/umbrella_agents/callbacks/: audit.py  streaming.py
agents/umbrella_agents/db/: engine.py  models.py
agents/umbrella_agents/es/: client.py
agents/umbrella_agents/routers/: execute.py  health.py  stream.py  translate.py
agents/umbrella_agents/tools/: es_get_mapping.py  es_search.py  registry.py  sql_query.py
connectors/connector-framework/: pyproject.toml
connectors/connector-framework/tests/: conftest.py  test_base.py  test_config.py  test_dead_letter.py  test_health.py  test_ingestion_client.py  test_interface.py  test_kafka_producer.py  test_logging.py  test_models.py  test_retry.py  test_shutdown.py
connectors/connector-framework/umbrella_connector/: __init__.py  base.py  config.py  dead_letter.py  health.py  ingestion_client.py  interface.py  kafka_producer.py  logging.py  models.py  retry.py  shutdown.py
connectors/connector-framework/umbrella_schema/: __init__.py  normalized_message.py
connectors/email/: DESIGN.md  Dockerfile  README.md  pyproject.toml
connectors/email/tests/: conftest.py  test_config.py  test_connector.py  test_envelope.py  test_imap_client.py  test_parser.py  test_processor.py  test_s3.py
connectors/email/umbrella_email/: __init__.py  __main__.py  config.py  connector.py  envelope.py  imap_client.py  parser.py  processor.py  s3.py
deploy/k8s/umbrella-connectors/: README.md  email-connector-deployment.yaml  email-processor-deployment.yaml  mailserver-deployment.yaml  namespace.yaml
deploy/k8s/umbrella-ingestion/: README.md  deployment.yaml  namespace.yaml
docs/: ELASTICSEARCH_IMPLEMENTATION_SUMMARY.md  ELASTICSEARCH_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  agent-layer-plan-phase-2.md  agent-layer-plan.md  alert-generation-ui.md  docker-images.md  entity-resolution.md  minikube-deployment.md  pipeline-minikube-plan.md  ui-layer-plan-phase-1.md  ui-layer-plan-phase-2.md  ui-layer-plan-phase-3.md  ui-layer-plan-phase-4-5.md  ui-layer-plan-phase-4.md  ui-layer-plan-phase-5.md  ui-layer-plan-phase-6.md  ui-layer-plan.md
docs/schema/: normalized-message.v1.schema.json  postgres.md
docs/usecases/: cyber_crime_prevention.md  regulatory_compliance.md
infrastructure/elasticsearch/: Dockerfile  README.md  docker-compose.yml
infrastructure/kafka/: Dockerfile  docker-compose.yml
infrastructure/logstash/: Dockerfile
ingestion-api/: Dockerfile  README.md  pyproject.toml
ingestion-api/tests/: conftest.py  test_config.py  test_health.py  test_models.py  test_normalizer_email.py  test_normalizer_registry.py  test_percolator.py  test_resolver.py  test_s3.py  test_service.py
ingestion-api/umbrella_ingestion/: __init__.py  __main__.py  config.py  health.py  models.py  percolator.py  resolver.py  s3.py  service.py
ingestion-api/umbrella_ingestion/normalizers/: __init__.py  base.py  email.py  registry.py
scripts/: build-images.sh  deploy-minikube.sh  ingest-test-mails.sh  seed-policies.sh  test-pipeline-minikube.sh  test-ui-minikube.sh  validate-docker-setup.sh
scripts/sample-eml/: README.md  multipart-alternative.eml  simple-text.eml  test-email.eml
ui/backend/: Dockerfile  pyproject.toml
ui/backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_decisions.py  test_es_queries.py  test_export.py  test_groups.py  test_messages.py  test_policies.py  test_queues.py  test_rbac.py  test_risk_models.py  test_users.py
ui/backend/umbrella_ui/: __main__.py  app.py  config.py  deps.py
ui/backend/umbrella_ui/auth/: jwt.py  password.py  rbac.py  schemas.py
ui/backend/umbrella_ui/db/: engine.py
ui/backend/umbrella_ui/db/models/: alert.py  iam.py  policy.py  review.py
ui/backend/umbrella_ui/es/: client.py  models.py  queries.py
ui/backend/umbrella_ui/routers/: alerts.py  audit.py  auth.py  decisions.py  export.py  groups.py  messages.py  policies.py  queues.py  risk_models.py  roles.py  users.py
ui/backend/umbrella_ui/schemas/: alert.py  common.py  export.py  iam.py  message.py  policy.py  review.py
ui/frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+198 files in other folders)
