[project]
name = "umbrella-agents"
version = "0.1.0"
description = "Umbrella agent runtime — LLM-powered analytics agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "elasticsearch[async]>=8.0,<9.0",
    "litellm>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-litellm>=0.5",
    "httpx>=0.27",
    "sse-starlette>=2.0",
]

[project.scripts]
umbrella-agents = "umbrella_agents.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["umbrella_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
