[project]
name = "umbrella-schema"
version = "0.1.0"
description = "Shared data models for the Umbrella platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["umbrella_schema"]
