[project]
name = "umbrella-connector-framework"
version = "0.1.0"
description = "Shared data models and connector plugin framework for the Umbrella platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "aiokafka>=0.11",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "structlog>=24.0",
    "tenacity>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["umbrella_schema", "umbrella_connector"]
